@@ -1,68 +1,0 @@
-/*
- * Off Canvas
- * --------------------------------------------------
- */
-@media screen and (max-width: 991px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all .25s ease-out;
-         -o-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-  }
-
-  .row-offcanvas-right {
-    right: 0;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: calc(-50% + 7px);
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: calc(-50% + 7.5px);
-  }
-
-  .row-offcanvas-right.active {
-    right: calc(50% + 7.5px);
-  }
-
-  .row-offcanvas-left.active {
-    left: calc(50% + 7.5px);
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 50%;
-  }
-}
-
-@media screen and (max-width: 479px) {
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: calc(-100% + 15px);
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: calc(-100% + 15px);
-  }
-
-  .row-offcanvas-right.active {
-    right: calc(100% + 15px);
-  }
-
-  .row-offcanvas-left.active {
-    left: calc(100% + 15px);
-  }
-
-  .sidebar-offcanvas {
-    width: 100%;
-  }
-}
