@@ -26,7 +26,6 @@
     "images",
     "index.html",
     "locale",
-    "offcanvas.css",
     "package.json",
     "src",
     "tests"
