@@ -1,3 +1,5 @@
+* Increase the space available for tab list
+* Allow to toggle menu on large screen
 * Manage URL and history
 
 Version 4.8.0 - 2018-04-23
